# mv-mqtt-client

./: .gitignore  Cargo.toml  Dockerfile  README.md  io.github.jgreitemann.mv-mqtt-client.yml  meson.build  meson_options.txt
.github/workflows/: flatpak.yml  linux-ci.yml
build-aux/: cargo.sh
data/: io.github.jgreitemann.mv-mqtt-client.desktop.in  io.github.jgreitemann.mv-mqtt-client.metainfo.xml.in  meson.build  resources.gresource.xml
data/icons/: meson.build
data/ui/: MainWindow.ui  RecipeParamRow.ui  RecipesPane.ui  ResultsPane.ui
res/ui/: MainWindow.ui  RecipeParamRow.ui  RecipesPane.ui  ResultsPane.ui
src/: meson.build
src/mvjson/: definitions.rs  helpers.rs  lib.rs
