[package]
name = "mv-mqtt-client"
version = "0.0.1"
authors = ["Jonas Greitemann <jgreitemann@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
gdk-pixbuf = "0.14.0"
gio = "0.14.8"
glib = "0.14.8"
libadwaita = "0.1.0-beta-1"
gtk4 = "0.3.1"
enum-map = "0.6.4"
itertools = "0.10.1"
futures = "0.3.17"
paho-mqtt = "0.9.1"
pango = "0.14.8"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[lib]
name = "mvjson"
path = "src/mvjson/lib.rs"

[[bin]]
name = "mv_mqtt_client"
path = "src/bin/main.rs"
