[package]
name = "mv-mqtt-client"
version = "0.0.2"
authors = ["Jonas Greitemann <jgreitemann@gmail.com>"]
edition = "2021"
autobins = false

[dependencies]
gdk-pixbuf = "0.15.1"
gio = "0.15.3"
glib = "0.15.3"
libadwaita = "0.1.0"
gtk4 = "0.4.5"
enum-map = "0.6.4"
itertools = "0.10.1"
futures = "0.3.17"
paho-mqtt = "0.9.1"
pango = "0.15.2"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[lib]
name = "mvjson"
path = "src/mvjson/lib.rs"

[[bin]]
name = "mv_mqtt_client"
path = "src/bin/main.rs"
