[package]
name = "mv-mqtt-client"
version = "0.0.2"
authors = ["Jonas Greitemann <jgreitemann@gmail.com>"]
edition = "2021"
autobins = false

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
gdk-pixbuf = "0.15.6"
gio = "0.15.7"
glib = "0.15.9"
libadwaita = "0.1.0"
gtk4 = "0.4.6"
enum-map = "2.0.3"
itertools = "0.10.3"
futures = "0.3.21"
paho-mqtt = "0.10.0"
pango = "0.15.7"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[lib]
name = "mvjson"
path = "src/mvjson/lib.rs"

[[bin]]
name = "mv-mqtt-client"
path = "src/bin/main.rs"
